<resources>
    <string name="app_name">E Commerce</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="view_catalog">View catalog</string>
    <string name="login">Login</string>

    <!--Fonts-->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="err_msg_password">Password too short</string>
    <string name="err_msg_email">Wrong email format</string>
    <string name="app_logo">App logo</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="items_catalog">Items Catalog</string>
    <string name="favorites">Favorites</string>
    <string name="my_orders">My Orders</string>
    <string name="my_notifications">My Notifications</string>
    <string name="user_first_name">User First Name</string>
    <string name="show_catalog">Show the catalog</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="sample_item">Sample Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sample_price">26567</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="error_message">Something went wrong, try again later</string>

    <string name="lorem_ipsum">Donec et ex laoreet, aliquet metus in, malesuada ligula. Promto di carste psi</string>

    <!-- Product names -->
    <string name="product_name_1">Camera</string>
    <string name="product_name_2">Monitor</string>
    <string name="product_name_3">Printer</string>
    <string name="product_name_4">Laptop</string>
    <string name="product_name_5">Guitar</string>
    <string name="product_name_6">Dumbbell</string>
    <string name="product_name_7">Cake</string>
    <string name="product_name_8">Bag</string>
    <string name="product_name_9">Car</string>
    <string name="product_name_10">Shoes</string>

    <!-- Product Uris -->
    <string name="product_url_1">http://img01.deviantart.net/f308/i/2012/007/8/3/camera_02_png_hq_by_gd08-d4lllmr.png</string>
    <string name="product_url_2">http://pngimg.com/upload/laptop_PNG5875.png</string>
    <string name="product_url_3">http://pngimg.com/upload/printer_PNG7726.png</string>
    <string name="product_url_4">http://images.clipartpanda.com/laptop-png-The-Lenovo-IdeaPad-Y550P-324156U-laptop.png</string>
    <string name="product_url_5">https://d13yacurqjgara.cloudfront.net/users/5172/screenshots/873110/attachments/93723/guitar.png</string>
    <string name="product_url_6">http://www.eserfitness.com/wp-content/uploads/2014/12/Dumbbell-pack.png</string>
    <string name="product_url_7">http://pngimg.com/upload/cake_PNG13114.png</string>
    <string name="product_url_8">https://www.frostriver.com/wp-content/uploads/2014/02/p-363-652-Flight-Bag.png</string>
    <string name="product_url_9">http://3.bp.blogspot.com/-l3MxjN1EL8c/VcLaLAGZ0vI/AAAAAAAAE9M/pbiRVc9zl3c/s1600/car_large.png</string>
    <string name="product_url_10">http://www.doubleselect.com/wp-content/uploads/2012/07/Mr.Hare_AW12_footwear_shoes.png</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="close_app">Close App?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="orders_fragment">Orders Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="sample_quantity">1</string>
    <string name="facebook_button">Facebook button</string>
    <string name="twitter_button">Twitter button</string>
    <string name="vk_button">VK button</string>
    <string name="phone_label">Phone:</string>
    <string name="phone">+7 (917) 971-11-11</string>
    <string name="add_address">Add Address</string>
    <string name="show_on_map">Show on map</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="label_building">Building</string>
    <string name="address">Red Square 24-43, 6th Floor</string>
    <string name="label_comments">Comments</string>
    <string name="comments">6th Floor</string>
    <string name="label_work_address">Work:</string>
    <string name="work_comments_label">Comments</string>
    <string name="work_comments">The only office on the floor</string>
    <string name="push_notifications">Push notifications:</string>
    <string name="order_status_notification">Notify about the order status</string>
    <string name="special_offer_notification">Notify about promotions and special offers</string>
    <string name="delivery_location_label">Delivery location</string>
    <string name="delivery_location">In the middle of nowhere</string>
    <string name="hint_building">Bldg.</string>
    <string name="hint_apartment">Apt.</string>
    <string name="hint_floor">Floor</string>
    <string name="address_comments">Comments</string>
    <string name="street">Street</string>
    <string name="dummy_street">Dummy Street</string>

</resources>
